# 3D-Solar-Potential-Analysing

./: .gitignore  .venv) ubuntu@ip-172-31-31-115~3D-S.txt  Data Management-Iteration1 (3).docx  README.md  package-lock.json  package.json  vite.config.js
Backend/: .env.example  .gitignore  README.md  pyproject.toml
Backend/api/: README.md  pyproject.toml
Backend/api/app/: config.py  db.py  errors.py  main.py
Backend/api/app/constants/: melbourne_psh.py
Backend/api/scripts/: backfill_max_kwh.py  reverse_geocode_addresses.py
Backend/api/tests/: conftest.py  test_buildings.py  test_health.py  test_solar.py  test_yield.py
Backend/app/: config.py  main.py  rate_limit.py
Backend/app/models/: schemas.py
Backend/app/routers/: ai.py  buildings.py  impact.py  precincts.py  solar.py  solar_cache.py  sun.py  yield_engine.py
Backend/app/services/: ai_context.py  ai_debug.py  ai_history.py  ai_prompts.py  ai_safety.py  ai_safety_lexicon.py  ai_service.py  ai_tools.py  building_query.py  geometry.py  precinct_query.py  shadow_impact.py  solar_api.py  solar_impact.py  sun_position.py  yield_calc.py
Backend/app/sql/: building_by_id.sql  buildings_count.sql  buildings_shadow_context_by_structure_id.sql  buildings_stats.sql  impact_by_id.sql  precinct_by_id.sql  precincts_list.sql  solar_by_structure_id.sql  yield_by_id.sql  yield_by_structure_id.sql
Backend/scripts/: backfill_max_kwh.py  batch_solar_fetch.py  migrate_min_max_kwh.sql  reverse_geocode_addresses.py
Backend/tests/: conftest.py  test_buildings.py  test_search.py  test_sql_files.py
Frontend/: index.html  (+2 more)
(+90 files in other folders)
