[project]
name = "solarmap-api"
version = "0.1.0"
description = "Read-only FastAPI service for the 3D Solar Potential Analysing project (Epics 1/2/3)"
requires-python = ">=3.11"

# Pinned to exact versions so production matches dev. Bump deliberately.
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "gunicorn==23.0.0",
    "psycopg[binary,pool]==3.2.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "slowapi==0.1.9",
    "pysolar==0.11",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
